k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakery-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bakery-frontend
                port:
                  number: 80
